# frontier-advisor-mcp

./: .gitignore  ARCHITECTURE.md  README.md  docker-mcp-catalog.yaml  install.bat  install.sh
mcp/: .dockerignore  ARCHITECTURE.md  Dockerfile  README.md  docker-mcp-catalog.yaml  install.bat  install.sh  mcp.json.example  pyproject.toml  test-coverage-plan.md
mcp/src/frontier_advisor/: adapter.py  server.py
mcp/tests/: test_adapter.py  test_server.py
pi/: adapter.test.ts  adapter.ts  frontier-advisor.ts  tool.ts
src/frontier_advisor/: audit.py  server.py  tiers.py
tests/: test_audit.py
